# STEAM-FlexFlow

./: .gitignore  .gitmodules  CMakeLists.txt  FlexFlow.mk
cmake/: utils.cmake
config/: config.inc  config.linux  oconfig.linux
examples/cpp/vgg16sim/: CMakeLists.txt  vgg16.cc  vgg16.cu  vgg16.h
exp/usc-discovery/: README.md  ffsim-opera.diff
ffsim-opera-v2/: Makefile  ffapp.cpp  ffapp.h  ndp.cpp  parse_output  pipe.cpp  rlbmodule.cpp
ffsim-opera-v2/datacenter/: Makefile  candle_ps.job  dlrm_ps.job  main_ndp_dynexpTopology.cpp  run_candle_ps.sh  run_dlrm_ps.sh
include/: blossom_match.cc  blossom_match.h  config.h  isi_parallel.h  mapper.h  model.h  random_utils.h  simulator.h  taskgraph_generated.h  topology.h  unionfind.hpp
measures/: alexnet.json  candle.json  candle1024.json  candle16.json  candle16_large.json  candle32.json  candle32_large.json  candle_128.json  dlrm128.json  dlrm16.json  dlrm16_large.json  dlrm32.json  dlrm32_large.json  dlrmlarge.json  dlrmsmall.json  ncf128.json  resnet.json  resnet128.json  transformer.json  transformer128.json  transformer16.json  transformer32.json  vgg.json  vgg128.json  vgg16.json  vgg32.json
optimization_tests/: test_optimization_candle1024  test_optimization_candle128  test_optimization_candle16  test_optimization_candle256  test_optimization_candle512  test_optimization_candle64  test_optimization_dlrm128  test_optimization_dlrm256
optimization_tests/candle_measures/: candle1024.json  candle128.json  candle16.json  candle256.json  candle32.json  candle512.json  candle64.json
src/data_generator/: README  (+14 more)
(+260 files in other folders)
